--- a/youtube-ad-skipper-chrome/manifest.json
+++ b/youtube-ad-skipper-chrome/manifest.json
@@ -1,15 +1,17 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "version": "1.0",
+    "author": "xyz",
     "name": "Youtube Ad Skipper",
     "icons": {
         "16": "/img/icon.png",
         "48": "/img/icon.png",
         "128": "/img/icon.png"
     },
-    "permissions": ["activeTab", "contextMenus"],
+    "permissions": ["activeTab", "contextMenus", "scripting"],
+    "host_permissions": ["https://www.youtube.com/*"],
     "background": {
-        "scripts": ["background.js", "remove-ads.js"]
+        "service_worker": "background.js"
     },
     "content_scripts": [
         {
